--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 
     <!-- Register Link (Optional) -->
     <div class="mt-4 text-center">
-      <p class="text-gray-600 text-sm">Don't have an account? <a href="register.html" class="text-blue-500 hover:underline">Register here</a></p>
+      <p class="text-gray-600 text-sm">Don't have an account? <a href="register" class="text-blue-500 hover:underline">Register here</a></p>
     </div>
   </div>
 
