--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -30,6 +30,10 @@
 
     </form>
 
+    <!-- Register Link (Optional) -->
+    <div class="mt-4 text-center">
+      <p class="text-gray-600 text-sm">Don't have an account? <a href="/admin/register" class="text-green-500 hover:underline">Register here</a></p>
+    </div>
   </div>
 
 </body>
